# VoiceLift

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  _Cargo.toml  android.code-workspace  project-organization.excalidraw
.cargo/: config.toml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/daytheipc/VoiceLift/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/daytheipc/VoiceLift/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/daytheipc/VoiceLift/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
src/pipewire_manager/: command.rs  device.rs  event.rs  link.rs  mod.rs  node.rs  objects.rs  port.rs  scan_devices.rs  utils.rs
vl-global/: Cargo.toml
vl-global/src/: audio_devices.rs  lib.rs  vl_config.rs
vl-linux-backend/: Cargo.toml
vl-linux-backend/src/: error.rs  event_handler.rs  event_parameters.rs  lib.rs  main.rs  piper.rs
vl-linux-backend/src/event_handlers/: handler.rs  mod.rs
vl-linux-backend/src/event_handlers/client/: get_devices.rs  link_devices.rs  mod.rs  stop_tts.rs  tts.rs  unlink_devices.rs
vl-linux-backend/src/event_handlers/server/: mod.rs
vl-linux-backend/src/events/: client.rs  get_devices.rs  link_devices.rs  mod.rs  server.rs  stop_tts.rs  tts.rs  unlink_devices.rs
vl-main/: Cargo.toml  Makefile
vl-main/.cargo/: config.toml
vl-main/src/: lib.rs  main.rs  manager.rs
vl-main/src/android/: jni.rs  keyboard.rs
vl-main/src/base_managers/: device_linker.rs  device_manager.rs  mod.rs  module_manager.rs  tts_manager.rs
vl-main/src/base_modules/: device_module.rs  mod.rs  module_manager.rs  tts_module.rs
vl-main/src/desktop/: mod.rs  virtual_keyboard.rs
vl-main/src/desktop/linux/: linux_device_manager.rs  linux_module.rs
vl-main/src/events/: mod.rs  module_event.rs  screen_event.rs
vl-main/src/linux/: linux_tts_manager.rs
vl-main/src/mobile/android/: mod.rs
vl-main/src/modules/: mod.rs  module_event.rs  module_manager.rs
vl-main/src/modules/base/: device_module.rs  i_module.rs  mod.rs  module.rs  tts_module.rs
vl-main/src/modules/linux/: device.rs  error.rs  linux_module.rs  mod.rs  tts.rs
vl-main/src/modules/linux/event_handlers/: handler.rs  mod.rs
vl-main/src/ui/: bevy_app.rs  mod.rs  screen_manager.rs  virtual_keyboard.rs
vl-main/src/ui/screens/: config_screen.rs  main_screen.rs  mod.rs
vl-tts-web/: Cargo.toml  README.md
vl-ui/: Cargo.toml
vl-ui/src/: device_linker.rs  device_manager.rs  linux_device_manager.rs  main.rs
vl-ui/src/base_managers/: device_linker.rs  mod.rs  tts_manager.rs
vl-ui/src/linux/: linux_device_manager.rs  linux_tts_manager.rs  mod.rs
