[package]
name = "vl-linux-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"

[target.'cfg(target_os = "linux")'.dependencies]
piper-rs = "0.1.9"
pipewire = "0.8.0"
rodio = "0.20.1"
simplelog = { version = "0.12.2", features = ["paris"] }
thiserror = "2.0.12"
easy-pw = { path = "../easy-pw" }
vl-global = { path = "../vl-global" }
busrt = { version = "0.4.19", features = ["broker", "rpc"] }
tokio = "1.44.2"
ipnetwork = { version = "0.20.0" }
serde = "1.0.219"
rmp-serde = "1.3.0"
