[package]
name = "vl-linux-backend"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
log = "0.4.27"
[target.'cfg(target_os = "linux")'.dependencies]
piper-rs = { version = "0.1.9", optional = true }
pipewire = { version = "0.8.0", optional = true }
rodio = { version = "0.20.1", optional = true }
simplelog = { version = "0.12.2", features = ["paris"] }
thiserror = "2.0.12"
easy-pw = { path = "../easy-pw", optional = true }
vl-global = { path = "../vl-global" }
busrt = { version = "0.4.19", features = ["broker", "rpc"], optional = true }
tokio = "1.44.2"
ipnetwork = { version = "0.20.0" }
serde = "1.0.219"
rmp-serde = "1.3.0"
