[package]
name = "vl-main"
version = "0.1.0"
edition = "2024"

[lib]
name = "vl_main"
crate-type = ["lib", "cdylib"]

[dependencies]
async-lock = "3.4.0"
bevy = { version = "0.16.0", default-features = false, features = [
    "android-native-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_log",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd",
] }
bevy_egui = "0.34.1"
busrt = { version = "0.4.19", features = ["ipc", "rpc"] }
futures = "0.3.31"
jni = "0.21.1"
log = "0.4.27"
ndk-context = "0.1.1"
rmp-serde = "1.3.0"
serde = "1.0.219"
simplelog = "0.12.2"
thiserror = "2.0.12"
tokio = "1.44.2"
vl-global = { path = "../vl-global" }

[target.'cfg(target_os = "linux")'.dependencies]
vl-linux-backend = { path = "../vl-linux-backend" }
