[package]
name = "vl-main"
version = "0.1.0"
edition = "2024"


[lib]
name = "vl_main"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.98"
async-lock = "3.4.0"
bevy = { version = "0.16.0", default-features = false, features = [
    # "android-native-activity",
    # "android_shared_stdcxx",
    "bevy_log",
    "bevy_asset",
    # "bevy_audio",
    "bevy_winit",
    "multi_threaded",
    "png",
    "vorbis",
    "webgl2",
    "x11",
    # "wayland",
    "zstd",
    "tonemapping_luts",
] }
bevy-tokio-tasks = "=0.16.0"
bevy_egui = "0.34.1"
busrt = { version = "0.4.19", features = ["ipc", "rpc"] }
egui-file-dialog = "0.10.0"
egui-notify = "0.19.0"
egui_material_icons = "0.3.0"
egui_taffy = "0.7.0"
egui_virtual_keyboard = { path = "../egui_virtual_keyboard" }
futures = "0.3.31"
jni = "0.21.1"
log = "0.4.27"
paste = "1.0.15"
# ndk-context = "0.1.1"
rmp-serde = "1.3.0"
serde = "1.0.219"
simplelog = "0.12.2"
thiserror = "2.0.12"
tokio = "1.45.1"
toml = "0.8.22"
vl-global = { path = "../vl-global" }

[target.'cfg(target_os = "linux")'.dependencies]
vl-linux-backend = { path = "../vl-linux-backend", default-features = false, features = [
] }
